--- a/Resources/Prototypes/Catalog/Fills/Items/firstaidkits.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/firstaidkits.yml
@@ -111,12 +111,8 @@
       - id: HandheldHealthAnalyzer
       - id: MedicatedSuture
       - id: RegenerativeMesh
-      - id: BruteAutoInjector
-      - id: BurnAutoInjector
-      - id: SyringeEphedrine
-      - id: SyringeTranexamicAcid
-      - id: AntiPoisonMedipen
       - id: Bloodpack
+      - id: InjectorCaseNOMedic
 
 - type: entity
   id: StimkitFilled
