--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -12,6 +12,9 @@
   - type: SolutionTransfer
     canChangeTransferAmount: true
   - type: Drink
+  - type: Tag
+    tags:
+    - BottleChem
   - type: Sprite
     state: icon
   - type: MeleeWeapon
