--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -755,6 +755,7 @@
       - MedkitAdvanced
       - MedkitRadiation
       - MedkitCombat
+      - InjectorCase
     dynamicRecipes:
       - HandheldCrewMonitor
       - ClothingHandsGlovesNitrile
