--- a/Resources/Prototypes/Procedural/salvage_rewards.yml
+++ b/Resources/Prototypes/Procedural/salvage_rewards.yml
@@ -70,7 +70,7 @@
     # rare armor
     ClothingOuterArmorRiot: 1.0
     # rare chemicals
-    Boxluxmedpen: 1
+    InjectorCaseLuxPens: 1
     OmnizineChemistryBottle: 1.0
     # money
     SpaceCash2500: 1.0
