--- a/Resources/Prototypes/Catalog/Fills/Boxes/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/medical.yml
@@ -125,6 +125,80 @@
         - BodyBag
 
 - type: entity
+  name: body bag box
+  parent: BoxCardboard
+  id: InjectorCase
+  description: Contains body bags.
+  components:
+  - type: Tag
+    tags:
+    - AutoInjectorCase
+  - type: Sprite
+    sprite: Objects/Specific/Medical/firstaidkits.rsi
+    layers:
+      - state: injectorscase
+  - type: Item
+    heldPrefix: injectorscase
+    sprite: Objects/Specific/Medical/firstaidkits.rsi
+    size: 15
+  - type: Storage
+    whitelist:
+      tags:
+        - AutoInjector
+
+- type: entity
+  name: box of lux medpens
+  parent: InjectorCase
+  id: InjectorCaseCBURN
+  description: A box full of medpens.
+  components:
+  - type: StorageFill
+    contents:
+      - id: AmbuzolPlusMedipen
+        amount: 1
+      - id: AmbuzolMedipen
+        amount: 3
+
+- type: entity
+  name: box of lux medpens
+  parent: InjectorCase
+  id: InjectorCaseStimpack
+  description: A box full of medpens.
+  components:
+  - type: StorageFill
+    contents:
+      - id: StimpackMini
+        amount: 6
+
+- type: entity
+  name: box of lux medpens
+  parent: InjectorCase
+  id: InjectorCaseLuxPens
+  description: A box full of medpens.
+  components:
+  - type: StorageFill
+    contents:
+      - id: Luxurymedpen
+        amount: 6
+
+- type: entity
+  name: box of lux medpens
+  parent: InjectorCase
+  id: InjectorCaseNOMedic
+  description: A box full of medpens.
+  components:
+  - type: StorageFill
+    contents:
+      - id: BurnAutoInjector
+        amount: 2
+      - id: BruteAutoInjector
+        amount: 2
+      - id: AntiPoisonMedipen
+        amount: 1
+      - id: CombatMedipen
+        amount: 1
+
+- type: entity
   name: box of magazines
   parent: BoxCardboard
   id: BoxCardboardMedPens
@@ -134,14 +208,3 @@
     layers:
       - state: box_of_doom
       - state: dna
-
-- type: entity
-  name: box of lux medpens
-  parent: BoxCardboardMedPens
-  id: Boxluxmedpen
-  description: A box full of medpens.
-  components:
-  - type: StorageFill
-    contents:
-      - id: Luxurymedpen
-        amount: 6
