--- a/Resources/Prototypes/Recipes/Lathes/medical.yml
+++ b/Resources/Prototypes/Recipes/Lathes/medical.yml
@@ -183,6 +183,14 @@
     Plastic: 300
 
 - type: latheRecipe
+  id: InjectorCase
+  result: InjectorCase
+  completetime: 1
+  materials:
+    Plastic: 300
+    Steel: 300
+
+- type: latheRecipe
   id: ClothingEyesHudMedical
   result: ClothingEyesHudMedical
   completetime: 2
