--- a/Resources/Maps/marathon.yml
+++ b/Resources/Maps/marathon.yml
@@ -6086,7 +6086,7 @@ entities:
             0: 65535
           7,-4:
             0: 63283
-            3: 2252
+            2: 2252
           7,-3:
             0: 65535
           7,-2:
@@ -6229,11 +6229,11 @@ entities:
             0: 65535
           6,-8:
             0: 7967
-            2: 224
-            3: 57344
+            3: 224
+            2: 57344
           6,-7:
             0: 7967
-            3: 224
+            2: 224
             4: 57344
           6,-6:
             0: 65311
@@ -6246,10 +6246,10 @@ entities:
             0: 13107
           7,-6:
             0: 13299
-            3: 52224
+            2: 52224
           7,-5:
             0: 16371
-            3: 49164
+            2: 49164
           8,-2:
             0: 65535
           8,-1:
@@ -6288,10 +6288,10 @@ entities:
             0: 65535
           6,-9:
             0: 7967
-            3: 57568
+            2: 57568
           7,-9:
             0: 13107
-            3: 64
+            2: 64
           -4,-12:
             0: 65535
           -4,-11:
@@ -6608,16 +6608,16 @@ entities:
             0: 4369
           8,-6:
             0: 22005
-            3: 43520
+            2: 43520
           8,-5:
             0: 65525
-            3: 10
+            2: 10
           9,-6:
             0: 22005
-            3: 8704
+            2: 8704
           9,-5:
             0: 22005
-            3: 43522
+            2: 43522
           9,-8:
             0: 17604
           9,-7:
@@ -6630,10 +6630,10 @@ entities:
             0: 4369
           10,-5:
             0: 5621
-            3: 59904
+            2: 59904
           11,-5:
             0: 305
-            3: 4096
+            2: 4096
           8,-14:
             0: 36047
           9,-14:
@@ -6886,7 +6886,7 @@ entities:
             0: 65280
           -16,14:
             0: 52862
-            2: 128
+            3: 128
           -16,15:
             0: 3976
           -16,13:
@@ -7461,7 +7461,7 @@ entities:
             0: 8928
           7,-10:
             0: 8816
-            3: 17408
+            2: 17408
           3,16:
             0: 242
           12,3:
@@ -7633,7 +7633,7 @@ entities:
           - 0
           - 0
           - 0
-          - 6666.982
+          - 0
           - 0
           - 0
           - 0
@@ -7656,7 +7656,7 @@ entities:
           - 0
           - 0
           - 0
-          - 0
+          - 6666.982
           - 0
           - 0
           - 0
@@ -11469,6 +11469,14 @@ entities:
       pos: -34.5,-10.5
       parent: 30
       type: Transform
+- proto: AirlockMinerGlassLocked
+  entities:
+  - uid: 16127
+    components:
+    - rot: 1.5707963267948966 rad
+      pos: 25.5,-12.5
+      parent: 30
+      type: Transform
 - proto: AirlockQuartermasterLocked
   entities:
   - uid: 11196
@@ -11519,12 +11527,6 @@ entities:
   - uid: 15622
     components:
     - pos: 33.5,-8.5
-      parent: 30
-      type: Transform
-  - uid: 16127
-    components:
-    - rot: -1.5707963267948966 rad
-      pos: 25.5,-12.5
       parent: 30
       type: Transform
   - uid: 18846
@@ -102948,7 +102950,7 @@ entities:
     - pos: -23.5,-11.5
       parent: 30
       type: Transform
-    - SecondsUntilStateChange: -7466.1616
+    - SecondsUntilStateChange: -7502.5947
       state: Closing
       type: Door
   - uid: 21248
