--- a/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/access_configurator.yml
@@ -36,6 +36,7 @@
       - HeadOfPersonnel
       - HeadOfSecurity
       - Hydroponics
+      - Miner
       - Janitor
       - Kitchen
       - Maintenance
