--- a/Resources/Maps/bagel.yml
+++ b/Resources/Maps/bagel.yml
@@ -11081,23 +11081,11 @@ entities:
       pos: 47.5,3.5
       parent: 60
       type: Transform
-  - uid: 9242
-    components:
-    - rot: 1.5707963267948966 rad
-      pos: 50.5,0.5
-      parent: 60
-      type: Transform
   - uid: 9283
     components:
     - name: Cargo
       type: MetaData
     - pos: 42.5,5.5
-      parent: 60
-      type: Transform
-  - uid: 9452
-    components:
-    - rot: 1.5707963267948966 rad
-      pos: 50.5,-0.5
       parent: 60
       type: Transform
   - uid: 11831
@@ -12734,6 +12722,14 @@ entities:
     - pos: 35.5,-6.5
       parent: 60
       type: Transform
+- proto: AirlockMaintMinerLocked
+  entities:
+  - uid: 21175
+    components:
+    - rot: 1.5707963267948966 rad
+      pos: 45.5,-2.5
+      parent: 60
+      type: Transform
 - proto: AirlockMaintRnDLocked
   entities:
   - uid: 9324
@@ -12769,12 +12765,6 @@ entities:
   - uid: 274
     components:
     - pos: 37.5,-2.5
-      parent: 60
-      type: Transform
-  - uid: 21175
-    components:
-    - rot: 3.141592653589793 rad
-      pos: 45.5,-2.5
       parent: 60
       type: Transform
 - proto: AirlockMaintSecLocked
@@ -12866,6 +12856,20 @@ entities:
     - name: surgery
       type: MetaData
     - pos: 42.5,-13.5
+      parent: 60
+      type: Transform
+- proto: AirlockMinerGlassLocked
+  entities:
+  - uid: 9242
+    components:
+    - rot: 1.5707963267948966 rad
+      pos: 50.5,0.5
+      parent: 60
+      type: Transform
+  - uid: 9452
+    components:
+    - rot: 1.5707963267948966 rad
+      pos: 50.5,-0.5
       parent: 60
       type: Transform
 - proto: AirlockQuartermasterGlassLocked
